java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/Incorrect.implicit.class.name.java
<error descr="Implicitly declared class's file name is not a valid identifier">void main() {}</error>